# mlff_continual_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: main.py
src/mlff/: base.py  models.py
